Button is shifted to the left and position is fixed

--- a/src/sass/layout/_EventTimeline.scss
+++ b/src/sass/layout/_EventTimeline.scss
@@ -27,22 +27,17 @@
     text-transform: uppercase;
     transition: 0.1s linear;
     border-bottom: 0.2rem solid rgba(255, 255, 255, 0);
-    padding-bottom: 0.4rem;
-    height: 100px;
     position: absolute;
-    left: 50%;
+    left: 90%;
     margin-left: -50px;
-    margin-top: 12px;
     font-size: 1.6rem;
+    border: 1px solid #5ec9f8;
+    padding: 10px;
+    position: fixed;
 
     &:hover {
-        color: rgba(lighten($color-primary, 10%), 1);
-        border-bottom: 0.2rem solid rgba(255, 255, 255, 0.9);
-    }
-
-    &.active {
-        color: $color-primary;
-        border-bottom: 0.2rem solid rgba(255, 255, 255, 0.9);
+        background-color: $color-primary;
+        color: $color-white;
     }
 }
 
